Almost done with data presentation chapter.

--- a/Rtutorial.bib
+++ b/Rtutorial.bib
@@ -256,3 +256,24 @@
 	year = {2018},
 	file = {Snapshot:C\:\\Users\\megha\\Zotero\\storage\\BAIKL4RJ\\nhis_2017_data_release.html:text/html}
 }
+
+@misc{chsi,
+	title = {Community {Health} {Status} {Indicators} ({CHSI}) to {Combat} {Obesity}, {Heart} {Disease} and {Cancer} - {Data}.gov},
+	url = {https://catalog.data.gov/dataset/community-health-status-indicators-chsi-to-combat-obesity-heart-disease-and-cancer},
+	urldate = {2018-09-30},
+	file = {Community Health Status Indicators (CHSI) to Combat Obesity, Heart Disease and Cancer - Data.gov:C\:\\Users\\Myriam\\Zotero\\storage\\UJL4FEQU\\community-health-status-indicators-chsi-to-combat-obesity-heart-disease-and-cancer.html:text/html}
+}
+
+@misc{hic,
+	title = {Health insurance coverage in the {United} {States}},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://en.wikipedia.org/w/index.php?title=Health_insurance_coverage_in_the_United_States&oldid=861600386},
+	abstract = {Health insurance coverage in the United States is provided by several public and private sources. During 2016, the U.S. population overall was approximately 325 million, with 53 million persons 65 years of age and over covered by the federal Medicare program. The 272 million non-institutional persons under age 65 either obtained their coverage from employer-based (155 million) or non-employer based (90 million) sources, or were uninsured (27 million). Approximately 15 million military personnel received coverage through the Veteran's Administration. During the year 2016, 91.2\% of Americans had health insurance coverage. Despite being among the top world economic powers, the US remains the sole industrialized nation in the world without universal health care coverage.Prohibitively high cost is the primary reason Americans give for problems accessing health care. At over 27 million, higher than the entire population of Australia, the number of people without health insurance coverage in the United States is one of the primary concerns raised by advocates of health care reform. Lack of health insurance is associated with increased mortality, in the range 30-90 thousand deaths per year, depending on the study.Multiple surveys indicate the number of uninsured fell between 2013-2016 due to expanded Medicaid eligibility and health insurance exchanges established due to the Patient Protection and Affordable Care Act, also known as the "ACA" or "Obamacare".  According to the United States Census Bureau, in 2012 there were 45.6 million people in the US (14.8\% of the under-65 population) who were without health insurance. Following the implementation of major ACA provisions in 2013, this figure fell by 18.3 million or 40\%, to 27.3 million by 2016 or 8.6\% of the under-65 population.The Census Bureau reported that the number of uninsured persons rose from 27.3 million in 2016 to 28.0 million in 2017. The uninsured rate rose from 8.6\% in 2016 to 8.7\% in 2017. This was the first increase in the number and rate of uninsured since 2010. Further, the Commonwealth Fund estimated in May 2018 that the number of uninsured increased by 4 million from early 2016 to early 2018. The rate of those uninsured increased from 12.7\% in 2016 to 15.5\% under their methodology. The impact was greater among lower-income adults, who had a higher uninsured rate than higher-income adults. Regionally, the South and West had higher uninsured rates than the North and East. Further, those 18 states that have not expanded Medicaid had a higher uninsured rate than those that did.The causes of this rate of uninsurance remain a matter of political debate.  Nearly half those without insurance cite its cost as the primary factor. Rising insurance costs have contributed to a trend in which fewer employers are offering health insurance, and many employers are managing costs by requiring higher employee contributions. Many of the uninsured are the working poor or are unemployed.},
+	language = {en},
+	urldate = {2018-10-05},
+	journal = {Wikipedia},
+	month = sep,
+	year = {2018},
+	note = {Page Version ID: 861600386},
+	file = {Snapshot:C\:\\Users\\Myriam\\Zotero\\storage\\A6C6J5P3\\index.html:text/html}
+}
